--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include hero-section.html %}
 
-<!-- {% include about-section.html %} -->
+<!-- {% include about-section.html %}
 
 {% include skills-section.html %}
 
@@ -20,4 +20,4 @@ layout: default
 
 {% include client-section.html %}
 
-{% include blog-section.html %}
+{% include blog-section.html %} -->
