--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ layout: default
 
 {% include hero-section.html %}
 
-<!--{% include about-section.html %} -->
+{% include about-section.html %}
 
-{% include skills-section.html %}
+<!-- {% include skills-section.html %}
 
 {% include experience-section.html %}
 
@@ -20,4 +20,4 @@ layout: default
 
 {% include client-section.html %}
 
-{% include blog-section.html %}
+{% include blog-section.html %} -->
