--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 {% include about-section.html %}
 
-<!-- {% include skills-section.html %}
+{% include skills-section.html %}
 
 {% include experience-section.html %}
 
@@ -20,4 +20,4 @@ layout: default
 
 {% include client-section.html %}
 
-{% include blog-section.html %} -->
+{% include blog-section.html %}
