--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -2,7 +2,7 @@
 layout: page
 title: Blogs
 ---
-<!-- blog -->
+<!-- blog 
 <section class="section">
   <div class="container">
     <div class="row">
@@ -12,7 +12,7 @@ title: Blogs
     </div>
   </div>
 </section>
-<!-- /blog -->
+ /blog -->
 
 <!-- clients -->
 <section class="section bg-light">
